Update style and about page

--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,37 @@
 
-/* Remove the navbar's default margin-bottom and rounded borders */
-.navbar {
-  margin-bottom: 0;
-  border-radius: 0;
-}
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-.row.content {height: 845px}
+.home {
+  height: 815px;
+  padding-top: 10%;
+}
 
-/* Set gray background color and 100% height */
-.sidenav {
-  padding-top: 20px;
-  background-color: #f1f1f1;
-  height: 100%;
+.about {
+  height: 815px;
+}
+
+.title {
+  text-align: center;
+}
+
+.member {
+
+}
+
+.avatar {
+    width: 100px;
+    height: 100px;
+    float: left;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    margin-right: 3em;
+    position: relative;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    -webkit-box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0,0,0,.2);
+    -moz-box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0,0,0,.2);
+    box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0,0,0,.2);
 }
 
 /* Set black background color, white text and some padding */
@@ -20,12 +39,4 @@ footer {
   background-color: #555;
   color: white;
   padding: 15px;
-}
-
-/* On small screens, set height to 'auto' for sidenav and grid */
-@media screen and (max-width: 767px) {
-  .sidenav {
-    display: none;
-  }
-  .row.content {height:auto;}
 }
