Add project overview

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,15 @@ html, body {
   opacity: 0.9;
 }
 
+.mui-panel h2 {
+  font-size: 30px;
+}
+
+.mui-panel p {
+  font-size: 20px;
+  margin: 20px;
+}
+
 .about {
   padding-top: 5%;
   background-image:url('pic1.png');
@@ -55,6 +64,15 @@ html, body {
     -webkit-box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0,0,0,.2);
     -moz-box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0,0,0,.2);
     box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0,0,0,.2);
+}
+
+.carousel-inner > .item > img, .carousel-inner > .item > a > img {
+      width: 70%;
+      margin: auto;
+}
+
+.carousel-caption h3 {
+  color: white;
 }
 
 /* Set black background color, white text and some padding */
